Bug 162732 - Vertical alignment = middle
Summary: Vertical alignment = middle
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
24.8.0.3 release
Hardware: All Linux (All)
: medium normal
Assignee: Heiko Tietze
URL:
Whiteboard: target:25.2.0 target:24.8.2 target:24...
Keywords:
Depends on:
Blocks: Start-Center
  Show dependency treegraph
 
Reported: 2024-08-31 22:18 UTC by Óvári
Modified: 2024-09-27 20:46 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
LibreOffice Donate (137.26 KB, image/png)
2024-08-31 22:20 UTC, Óvári
Details
LibreOffice Impress Status Bar (135.08 KB, image/png)
2024-09-01 20:55 UTC, Óvári
Details
LibreOffice Start Center "Open File" and "Writer Document" vertical alignment (214.50 KB, image/png)
2024-09-03 10:03 UTC, Óvári
Details
LibreOffice 25.2.0.0 Start Center (217.98 KB, image/png)
2024-09-06 16:05 UTC, Óvári
Details
Fixed in LO 24.8.2.1 (7.44 KB, image/png)
2024-09-27 20:46 UTC, Óvári
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Óvári 2024-08-31 22:18:52 UTC
Description:
"Donate" is not showing with middle vertical alignment. "Help" is shown with middle vertical alignment.

Reproduced with Linux Mint Cinnamon.

Not reproduced with Windows.

Steps to Reproduce:
1. Open LibreOffice without any application nor file open
2. 
3.

Actual Results:
"Donate" is not showing with middle vertical alignment.

Expected Results:
"Donate" showing with middle vertical alignment. Aligned with "Help"


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 24.8.0.3 (X86_64) / LibreOffice Community
Build ID: 0bdf1299c94fe897b119f97f3c613e9dca6be583
CPU threads: 12; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Flatpak
Calc: threaded
Comment 1 Óvári 2024-08-31 22:20:27 UTC
Created attachment 196155 [details]
LibreOffice Donate
Comment 2 Julien Nabet 2024-09-01 09:14:34 UTC
On pc Debian x86-64 with master sources updated today, I could reproduce this.

Just for the record, if we remove the icon with this patch for example:
diff --git a/sfx2/source/dialog/backingwindow.cxx b/sfx2/source/dialog/backingwindow.cxx
index 3c90d1ea2ade..f7bc57a3608e 100644
--- a/sfx2/source/dialog/backingwindow.cxx
+++ b/sfx2/source/dialog/backingwindow.cxx
@@ -196,7 +196,7 @@ BackingWindow::BackingWindow(vcl::Window* i_pParent)
     // tdf#161796 make the extension button show the donation page
     if (officecfg::Office::Common::Misc::ShowDonation::get())
     {
-        mxExtensionsButton->set_from_icon_name(BMP_DONATE); // icon first needed on gtk3 to apply the label
+        //mxExtensionsButton->set_from_icon_name(BMP_DONATE); // icon first needed on gtk3 to apply the label
         OUString sDonate(SfxResId(STR_DONATE_BUTTON));
         if (sDonate.getLength() > 8)
         {

it's ok.

Heiko: thought you might be interested in this one.
Comment 3 Óvári 2024-09-01 20:55:05 UTC
Created attachment 196163 [details]
LibreOffice Impress Status Bar

An image in the Status Bar in LibreOffice Impress may also need investigation.

Perhaps the image to the left of that image which is correct can provide code pointers to fix the Status Bar image and the Donate text.

Thank you
Comment 4 Heiko Tietze 2024-09-02 09:29:36 UTC
Weird, but can you try again with a nightly build? Made a change for bug 162615... but on system with KDE running with VCL=gtk3 it has a few pixels offset.
Comment 5 Heiko Tietze 2024-09-03 09:27:55 UTC
Let's try with a smaller icon.
Comment 6 Óvári 2024-09-03 10:03:08 UTC
Created attachment 196200 [details]
LibreOffice Start Center "Open File" and "Writer Document" vertical alignment

(In reply to Heiko Tietze from comment #5)
> Let's try with a smaller icon.
Can you please ensure that your fix has the text labels middle vertical alignment for the other icons too.

Please see the read annotations on "Open File" and "Writer Document" in the attached screenshot.

Thank you
Comment 7 Commit Notification 2024-09-03 13:18:21 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/91f0b84675b20332e618922494809d75d49e4fd6

Resolves tdf#162732 - Donate label not vertical centered

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Heiko Tietze 2024-09-03 13:37:30 UTC
(In reply to Óvári from comment #6)
> Can you please ensure that your fix has the text labels...
Actually I cannot fully reproduce the issue. Both on KDE/Qt as well openSuSE/Gtk3 in a VM show the donate label at max 1px shifted. Hard to spot.

But if the smaller icon solves the issue for you (please review with the nightly build) I can check whether the statusbar icons are off-sized.
Comment 9 Óvári 2024-09-03 20:30:25 UTC
(In reply to Heiko Tietze from comment #8)
> Actually I cannot fully reproduce the issue. Both on KDE/Qt as well
> openSuSE/Gtk3 in a VM show the donate label at max 1px shifted. Hard to spot.
Issue in screenshots attached to this issue are reproducible with the Cinnamon Desktop Environment (DE) which is different to KDE/Qt DEs.

Please try Linux Mint 22 “Wilma” Cinnamon Edition available at
https://linuxmint.com/edition.php?id=316

Thank you
Comment 10 Commit Notification 2024-09-03 20:49:43 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/b2094ca8fc71020b592235646e2b6cbfb4fdaf9c

Resolves tdf#162732 - Donate label not vertical centered

It will be available in 24.8.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2024-09-06 10:42:13 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "libreoffice-24-8-1":

https://git.libreoffice.org/core/commit/0f1fa98ad49c2893cae1e363cb8c4964a01dd21d

Resolves tdf#162732 - Donate label not vertical centered

It will be available in 24.8.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Óvári 2024-09-06 16:05:57 UTC
Created attachment 196287 [details]
LibreOffice 25.2.0.0 Start Center
Comment 13 Heiko Tietze 2024-09-06 16:07:45 UTC
If we make the icon even smaller it becomes too unobtrusive. Any advice, Caolan?
Comment 14 Caolán McNamara 2024-09-09 12:42:02 UTC
Seems that gtk defaults to baseline alignment in these cases. Maybe as a workaround https://gerrit.libreoffice.org/c/core/+/173077 works?
Comment 15 Commit Notification 2024-09-09 19:07:07 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6ca8cf32d2f879dbead2f402eeef60edd3f0266e

tdf#162732 force centered alignment for donate button text

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 Commit Notification 2024-09-11 08:16:16 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b4c52eb467b3f2164abfdece25830c8347f1ced9

Revert "Resolves tdf#162732 - Donate label not vertical centered"

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 17 Commit Notification 2024-09-13 06:34:22 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/2f5a28d70cab9e9b1c89545dfe658c1c9d119904

tdf#162732 force centered alignment for donate button text

It will be available in 24.8.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 18 Commit Notification 2024-09-13 06:37:25 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/bc15e025060c37d73119ac9e8493a56eaed3e095

Revert "Resolves tdf#162732 - Donate label not vertical centered"

It will be available in 24.8.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 19 Óvári 2024-09-27 20:46:06 UTC
Created attachment 196757 [details]
Fixed in LO 24.8.2.1

Fixed in

Version: 24.8.2.1 (X86_64) / LibreOffice Community
Build ID: 0f794b6e29741098670a3b95d60478a65d05ef13
CPU threads: 12; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Flatpak
Calc: threaded

Thank you