tdf#162732 force centered alignment for donate button text

bit of a bodge, gtk defaults to baseline alignment here, so force
what we want instead in a separate "Donate" button.

Change-Id: Iac7044c37f2e4c0e48b769c52612a3f5a2dfd350
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/173077
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/173242
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>