sfx2/source/dialog/backingwindow.cxx
@@ -170,6 +170,7 @@ BackingWindow::BackingWindow(vcl::Window* i_pParent)
     , mxBrandImageWeld(new weld::CustomWeld(*m_xBuilder, u"daBrand"_ustr, *mxBrandImage))
     , mxHelpButton(m_xBuilder->weld_button(u"help"_ustr))
     , mxExtensionsButton(m_xBuilder->weld_button(u"extensions"_ustr))
+    , mxDonateButton(m_xBuilder->weld_button(u"donate"_ustr))
     , mxAllButtonsBox(m_xBuilder->weld_container(u"all_buttons_box"_ustr))
     , mxButtonsBox(m_xBuilder->weld_container(u"buttons_box"_ustr))
     , mxSmallButtonsBox(m_xBuilder->weld_container(u"small_buttons_box"_ustr))
@@ -193,17 +194,19 @@ BackingWindow::BackingWindow(vcl::Window* i_pParent)
     mxHelpButton->set_label(mxAltHelpLabel->get_label());
     mxHelpButton->connect_clicked(LINK(this, BackingWindow, ClickHelpHdl));
 
-    // tdf#161796 make the extension button show the donation page
+    // tdf#161796 replace the extension button with a donate button
     if (officecfg::Office::Common::Misc::ShowDonation::get())
     {
-        mxExtensionsButton->set_from_icon_name(BMP_DONATE); // icon first needed on gtk3 to apply the label
+        mxExtensionsButton->hide();
+        mxDonateButton->show();
+        mxDonateButton->set_from_icon_name(BMP_DONATE);
         OUString sDonate(SfxResId(STR_DONATE_BUTTON));
         if (sDonate.getLength() > 8)
         {
-            mxExtensionsButton->set_tooltip_text(sDonate);
+            mxDonateButton->set_tooltip_text(sDonate);
             sDonate = OUString::Concat(sDonate.subView(0, 7)) + "...";
         }
-        mxExtensionsButton->set_label(sDonate);
+        mxDonateButton->set_label(sDonate);
     }
 
     mxDropTarget = mxAllRecentThumbnails->GetDropTarget();
@@ -266,6 +269,7 @@ void BackingWindow::dispose()
     mxBrandImageWeld.reset();
     mxBrandImage.reset();
     mxHelpButton.reset();
+    mxDonateButton.reset();
     mxExtensionsButton.reset();
     mxAllButtonsBox.reset();
     mxButtonsBox.reset();
@@ -321,6 +325,7 @@ void BackingWindow::initControls()
     checkInstalledModules();
 
     mxExtensionsButton->connect_clicked(LINK(this, BackingWindow, ExtLinkClickHdl));
+    mxDonateButton->connect_clicked(LINK(this, BackingWindow, ExtLinkClickHdl));
 
     mxOpenButton->connect_clicked(LINK(this, BackingWindow, ClickHdl));
 
@@ -543,11 +548,8 @@ void BackingWindow::setOwningFrame( const css::uno::Reference< css::frame::XFram
         xFramesSupplier->setActiveFrame(mxFrame);
 }
 
-IMPL_LINK(BackingWindow, ExtLinkClickHdl, weld::Button&, rButton,void)
+IMPL_STATIC_LINK_NOARG(BackingWindow, ExtLinkClickHdl, weld::Button&, void)
 {
-    if (&rButton != mxExtensionsButton.get())
-       return;
-
     try
     {
         OUString sURL;
